# posting-auth-service

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/: build-pipeline.yaml
.github/workflows/: build-pipeline.yaml
application/: api.py  db_config.py  main.py  security.py  settings.py
infra/: docker-compose-tests.yaml
src/models/: user.py
src/repositories/: user.py
src/routers/: auth.py  user.py
src/schemas/: auth.py  user.py
src/services/: user.py
src/tests/: conftest.py  test_auth.py
